--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
 </head>
 <body> 
-  <div class="card">
-    <div class="upper-card">
-        <img src="images/NicePng_headphones-vector-png_2099634.png">
-    </div>
-    <div class="lower-card">
-      <h2>Order Summary</h2>
-      <p id="exp-text">You can now listen to millions of songs,<br> audionbooks, and podcasts on any device<br> anywhere you like!</p>
-      <div class="plan">
-        <img src="images/icon-music.svg">
-        <div id="plan-t"><p id="p-txt">Annual Plan</p>
-        <p id="price">$59.99/year</p></div>
-        <p id="change">Change</p>
+  <main>
+    <div class="card">
+      <div class="upper-card">
+          <img src="images/NicePng_headphones-vector-png_2099634.png" alt="silhoutte of a person listening to music">
       </div>
-      <button class="btn">Proceed to Payment</button>
-      <p id="x-order"><a href="#">Cancel Order</a></p>
+      <div class="lower-card">
+        <h1>Order Summary</h1>
+        <p id="exp-text">You can now listen to millions of songs,<br> audionbooks, and podcasts on any device<br> anywhere you like!</p>
+        <div class="plan">
+          <img src="images/icon-music.svg" alt="music icon">
+          <div id="plan-t"><p id="p-txt">Annual Plan</p>
+          <p id="price">$59.99/year</p></div>
+          <button class="btn-1">Change</button>
+        </div>
+        <button class="btn">Proceed to Payment</button>
+        <p id="x-order"><a href="#">Cancel Order</a></p>
+      </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
