remove div for card and replaced it with main

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
 </head>
 <body> 
-  <main>
-    <div class="card">
+  <main class="card">
       <div class="upper-card">
           <img src="images/NicePng_headphones-vector-png_2099634.png" alt="silhoutte of a person listening to music">
       </div>
@@ -26,7 +25,6 @@
         <button class="btn">Proceed to Payment</button>
         <p id="x-order"><a href="#">Cancel Order</a></p>
       </div>
-    </div>
   </main>
 </body>
 </html>
