changed id attributes to class, also changed Annual Plan from p tag to heading tag h2, along with some style changes esp the fontsize of Annual plan section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <p id="exp-text">You can now listen to millions of songs,<br> audionbooks, and podcasts on any device<br> anywhere you like!</p>
         <div class="plan">
           <img src="images/icon-music.svg" alt="music icon">
-          <div id="plan-t"><p id="p-txt">Annual Plan</p>
-          <p id="price">$59.99/year</p></div>
+          <div><h2>Annual Plan</h2>
+          <p class="price">$59.99/year</p></div>
           <button class="btn-1">Change</button>
         </div>
         <button class="btn">Proceed to Payment</button>
