changed the color of the change button to blue and added a font-fammily as well as a text decoration of underline

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <button class="btn-1">Change</button>
         </div>
         <button class="btn">Proceed to Payment</button>
-        <p id="x-order"><a href="#">Cancel Order</a></p>
+        <p class="x-order"><a href="#">Cancel Order</a></p>
       </div>
   </main>
 </body>
